# vibe-fi

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
src/: library.cpp  library.hpp  lyrics.cpp  lyrics.hpp  main.cpp  player.cpp  player.hpp  playlist_manager.cpp  playlist_manager.hpp  search.cpp  search.hpp  ui.cpp  ui.hpp  utils.cpp  utils.hpp
